--- a/src/main/resources/verkefni/verkefnihbvvol30000/hotel-view.fxml
+++ b/src/main/resources/verkefni/verkefnihbvvol30000/hotel-view.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="verkefni.verkefnihbvvol30000.HotelController">
    <children>
-      <Button layoutX="491.0" layoutY="15.0" mnemonicParsing="false" onAction="#logUpButton" text="Login or Signup" />
+      <Button layoutX="491.0" layoutY="15.0" mnemonicParsing="false" onAction="#loginButton" text="Login" />
       <Button layoutX="497.0" layoutY="353.0" mnemonicParsing="false" onAction="#bookAndPay" text="Book and pay" />
       <DatePicker fx:id="fxStart" layoutX="89.0" layoutY="27.0" prefHeight="25.0" prefWidth="89.0" />
       <DatePicker fx:id="fxEnd" layoutX="207.0" layoutY="27.0" prefHeight="25.0" prefWidth="89.0" />
@@ -14,5 +14,6 @@
       <Button layoutX="363.0" layoutY="150.0" mnemonicParsing="false" onAction="#addRoom" text="add room" />
       <Button layoutX="359.0" layoutY="188.0" mnemonicParsing="false" onAction="#removeRoom" text="remove room" />
       <ListView fx:id="fxRooms" layoutX="46.0" layoutY="88.0" prefHeight="285.0" prefWidth="263.0" />
+      <Button fx:id="fxSignup" layoutX="488.0" layoutY="52.0" mnemonicParsing="false" onAction="#signUpButton" text="Signup" />
    </children>
 </AnchorPane>
