--- a/src/main/resources/verkefni/verkefnihbvvol30000/hotel-view.fxml
+++ b/src/main/resources/verkefni/verkefnihbvvol30000/hotel-view.fxml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="verkefni.verkefnihbvvol30000.HotelController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="verkefni.verkefnihbvvol30000.HotelController">
    <children>
-      <Button layoutX="491.0" layoutY="15.0" mnemonicParsing="false" onAction="#loginButton" text="Login" />
-      <Button layoutX="497.0" layoutY="353.0" mnemonicParsing="false" onAction="#bookAndPay" text="Book and pay" />
-      <DatePicker fx:id="fxStart" layoutX="89.0" layoutY="27.0" prefHeight="25.0" prefWidth="89.0" />
-      <DatePicker fx:id="fxEnd" layoutX="207.0" layoutY="27.0" prefHeight="25.0" prefWidth="89.0" />
-      <Label layoutX="46.0" layoutY="31.0" prefHeight="17.0" prefWidth="64.0" text="Frá-til" />
-      <TextField layoutX="321.0" layoutY="27.0" />
-      <Button layoutX="363.0" layoutY="150.0" mnemonicParsing="false" onAction="#addRoom" text="add room" />
-      <Button layoutX="359.0" layoutY="188.0" mnemonicParsing="false" onAction="#removeRoom" text="remove room" />
-      <ListView fx:id="fxRooms" layoutX="46.0" layoutY="88.0" prefHeight="285.0" prefWidth="263.0" />
-      <Button fx:id="fxSignup" layoutX="488.0" layoutY="52.0" mnemonicParsing="false" onAction="#signUpButton" text="Signup" />
+      <Button layoutX="519.0" layoutY="29.0" mnemonicParsing="false" onAction="#loginButton" prefHeight="26.0" prefWidth="56.0" text="Login" />
+      <Button layoutX="491.0" layoutY="354.0" mnemonicParsing="false" onAction="#bookAndPay" text="Book and pay" />
+      <DatePicker fx:id="fxStart" layoutX="70.0" layoutY="29.0" prefHeight="26.0" prefWidth="101.0" />
+      <DatePicker fx:id="fxEnd" layoutX="208.0" layoutY="29.0" prefHeight="26.0" prefWidth="101.0" />
+      <Label layoutX="46.0" layoutY="33.0" prefHeight="17.0" prefWidth="24.0" text="Frá" />
+      <TextField layoutX="331.0" layoutY="29.0" promptText="Search" />
+      <!-- <Button layoutX="363.0" layoutY="150.0" mnemonicParsing="false" onAction="#addRoom" text="add room" /> -->
+      <Button layoutX="331.0" layoutY="330.0" mnemonicParsing="false" onAction="#removeRoom" text="remove room" />
+      <ListView fx:id="fxRooms" layoutX="46.0" layoutY="71.0" prefHeight="285.0" prefWidth="263.0" />
+      <Button fx:id="fxSignup" layoutX="519.0" layoutY="62.0" mnemonicParsing="false" onAction="#signUpButton" text="Signup" />
+      <Label layoutX="187.0" layoutY="33.0" text="Til" />
    </children>
 </AnchorPane>
