--- a/src/main/resources/verkefni/verkefnihbvvol30000/hotel-view.fxml
+++ b/src/main/resources/verkefni/verkefnihbvvol30000/hotel-view.fxml
@@ -14,8 +14,8 @@
       <DatePicker fx:id="fxStart" layoutX="70.0" layoutY="29.0" prefHeight="26.0" prefWidth="101.0" />
       <DatePicker fx:id="fxEnd" layoutX="208.0" layoutY="29.0" prefHeight="26.0" prefWidth="101.0" />
       <Label layoutX="46.0" layoutY="33.0" prefHeight="17.0" prefWidth="24.0" text="Frá" />
-      <TextField layoutX="331.0" layoutY="29.0" promptText="Search" />
-      <!-- <Button layoutX="363.0" layoutY="150.0" mnemonicParsing="false" onAction="#addRoom" text="add room" /> -->
+      <TextField fx:id="searchBar" layoutX="331.0" layoutY="29.0" promptText=" Search location" />
+      <Button layoutX="331.0" layoutY="296.0" mnemonicParsing="false" onAction="#addRoom" prefHeight="26.0" prefWidth="89.0" text="add room" />
       <Button layoutX="331.0" layoutY="330.0" mnemonicParsing="false" onAction="#removeRoom" text="remove room" />
       <ListView fx:id="fxRooms" layoutX="46.0" layoutY="71.0" prefHeight="285.0" prefWidth="263.0" />
       <Button fx:id="fxSignup" layoutX="519.0" layoutY="62.0" mnemonicParsing="false" onAction="#signUpButton" text="Signup" />
